Fixes #12 - make description expand/collapse feature panel

--- a/static/sass/elements/chromedash-feature.scss
+++ b/static/sass/elements/chromedash-feature.scss
@@ -58,6 +58,7 @@ section {
 
   &.desc {
     margin-right: $spacer-left;
+    cursor: pointer;
 
     summary {
       text-overflow: ellipsis;
